# ecosystem-integrity-index

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
analysis/: README.md
analysis/interactive/: fuzzy_sum.ipynb
docs/: changelog.md  contributing.md  data-assets.md  getting-started.md  index.md  limitations.md  status.md  usage.md
docs/api/: analysis.md  client.md  compute.md  index.md  training.md
docs/methodology/: compositional_integrity.md  ecosystem_integrity.md  functional_integrity.md  index.md  local_modulation.md  structural_integrity.md
notebooks/: README.md  eii_client_tutorial.ipynb  local_modulation_tutorial.ipynb
pipelines/: README.md
pipelines/modeling/: README.md
pipelines/modeling/eii_calculation/: compute_npp_decile_breaks.ipynb  pre_compute_global_eii_oneshot.ipynb
pipelines/modeling/functional_integrity/npp_model/: 01_sampling.ipynb  02_npp_model_training.ipynb  03_inference_and_stats.ipynb  04_npp_global_production.ipynb  05_local_model_fitting.ipynb  notebook_setup.py
pipelines/modeling/structural_integrity/: config.yaml  gee_structural_integrity.js  notebook_setup.py  precalc_corearea.ipynb
pipelines/preprocessing/: README.md
pipelines/preprocessing/climatezones/: legend.txt  upload_gloh2o_koppen_v3.sh
pipelines/preprocessing/ecoregions/: config.cfg  rasterize_ecoregions.py
pipelines/preprocessing/natural_lands/: calculate_hmi_natural_areas.js  calculate_hmi_natural_areas.py  config.cfg  convert_geometry_collections.py  upload.sh
pipelines/preprocessing/npp/: 00_get_cdse_clms_files.sh  01_calculate_annual_npp.py  02_upload_to_gee.sh  README.md  config.cfg
pipelines/preprocessing/protected_areas/: config.cfg  rasterize_wdpa.py
pipelines/preprocessing/soilgrids/: README.md  config.cfg  explore_gapfilling.js  interpolate_soilgrids.py
pipelines/preprocessing/utils/: __init__.py  config_utils.py  utils_gee_assets.py
src/eii/: __init__.py  config.py
src/eii/_utils/: __init__.py  gee.py
src/eii/client/: __init__.py  analysis.py  assets.py  modulation.py  retrieve.py  utils.py
src/eii/compute/: __init__.py  compositional.py  grid.py  inference.py  integrity.py  npp.py  settings.py  stats.py  structural.py
src/eii/compute/modulation/: __init__.py  biodiversity.py  core.py  settings.py  soil.py  water.py
src/eii/training/: __init__.py  model.py  sampling.py  settings.py  validation.py
src/eii/utils/: __init__.py  gee.py
tests/: conftest.py
tests/test_client/: __init__.py  test_analysis.py  test_assets.py  test_modulation.py  test_retrieve.py  test_utils.py
