[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ecosystem-integrity-index"
dynamic = ["version"]
description = "Tools for calculating, accessing and analyzing the Ecosystem Integrity Index (EII)"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Benjamin Leutner", email = "benjamin.leutner@thelandbankinggroup.com"}
]
maintainers = [
    {name = "Benjamin Leutner", email = "benjamin.leutner@thelandbankinggroup.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
    "ecosystem",
    "integrity",
    "earth-engine",
    "remote-sensing",
    "biodiversity",
    "npp",
    "conservation",
]
dependencies = [
    "earthengine-api>=0.1.370",  # Only GEE API for lightweight client usage
]

[project.optional-dependencies]
# For eii.compute module - full EII calculation from scratch
compute = [
    "geopandas>=0.14",
    "pandas>=2.0",
    "numpy>=1.24",
]

# For client raster downloads
client = [
    "numpy>=1.24",
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "xarray>=2023.0",
]

# For eii.training module - model training and validation
training = [
    "ecosystem-integrity-index[compute]",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "mypy>=1.0",
]

# Documentation
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]

# Full installation with all optional dependencies
all = [
    "ecosystem-integrity-index[training,dev,docs,client]",
]

[project.urls]
Documentation = "https://landler-io.github.io/ecosystem-integrity-index/"
Repository = "https://github.com/landler-io/ecosystem-integrity-index"
Issues = "https://github.com/landler-io/ecosystem-integrity-index/issues"
Changelog = "https://github.com/landler-io/ecosystem-integrity-index/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/eii/_version.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["eii"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
